--- a/.env.example
+++ b/.env.example
@@ -2,16 +2,16 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://gps-technology.loc
+APP_URL=http://acme.loc
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=104.237.149.181
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=vigencias
-DB_USERNAME=root
-DB_PASSWORD=Mysql2016-
+DB_DATABASE=acme
+DB_USERNAME=cofran
+DB_PASSWORD=123456
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
